--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v1
       - uses: actions/setup-java@v3
         with:
-          distribution: 'corretto' # See 'Supported distributions' for available options
+          distribution: 'corretto'
           java-version: '17'
       - name: Cache Maven packages
         uses: actions/cache@v3
