--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,8 +1,10 @@
 name: Measure coverage
 
 on:
+  push:
+    branches: [ "master" ]
   pull_request:
-
+    branches: [ "master" ]
 jobs:
   build:
     runs-on: ubuntu-latest
