--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Conventional Commits changelog
+        id: changelog
         uses: TriPSs/conventional-changelog-action@v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
