--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,13 @@ phases:
       java: corretto17
   build:
     commands:
-      - mvn package -Dmaven.test.skip
+      - mvn clean install
+      - mv target/*.war app.war
 artifacts:
   files:
-    - target/*.war
+    - app.war
   discard-paths: yes
+#artifacts:
+#  files:
+#    - target/*.war
+#  discard-paths: yes
