--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8080
+management.endpoints.web.base-path=/
+management.endpoints.web.exposure.include=*
+#spring.thymeleaf.cache=false
